--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "amphp/http-client": "4.2.1",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.15",
-        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
@@ -97,6 +97,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "*",
         "phpunit/phpunit": "^12.2",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
