--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,38 +4,21 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # users_in_memory: { memory: null }
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
+        users_in_memory: { memory: null }
+        #app_user_provider:
+            #entity:
+                #class: App\Entity\User
+                #property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: app_user_provider
-            #users_in_memory
+            provider: users_in_memory
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
-            form_login:
-                login_path: app_login	# Show Login form
-                check_path: app_login	# Handle Login form
-                default_target_path: app_plainte_index
-                enable_csrf: true
-
-                logout:
-                path: app_logout
-
-                # where to redirect after logout
-                target: home__index
-
-            # configure the maximum login attempts
-            login_throttling:
-                max_attempts: 3
-                interval: '15 minutes'
 
 
             # https://symfony.com/doc/current/security/impersonating_user.html
