--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         "doctrine/doctrine-bundle": "^2.15",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^3.4",
+        "easycorp/easyadmin-bundle": "^4.24",
         "phpdocumentor/reflection-docblock": "^5.6",
-        "phpstan/phpdoc-parser": "^2.1",
+        "phpstan/phpdoc-parser": "^1.15",
         "symfony/asset": "7.0.*",
         "symfony/asset-mapper": "7.0.*",
         "symfony/console": "7.0.*",
