--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,18 +4,37 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
-        #app_user_provider:
-            #entity:
-                #class: App\Entity\User
-                #property: email
+        #users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+            custom_authenticator: App\Security\LoginAuthenticator
+
+            form_login:
+                login_path: login
+                check_path: login
+
+            logout:
+                path: logout
+                # where to redirect after logout
+                target: /
+            entry_point: App\Security\LoginAuthenticator
+
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                # by default, the feature is enabled by checking a checkbox in the
+                # login form, uncomment the following line to always enable it.
+                #always_remember_me: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -27,8 +46,15 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/agent, roles: ROLE_AGENT }
+         - { path: ^/login, roles: PUBLIC_ACCESS }
+         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
+
+
+    role_hierarchy:
+        ROLE_ADMIN:       [ROLE_AGENT, ROLE_ABONNE, ROLE_USER]
+        ROLE_AGENT:       [ROLE_ABONNE, ROLE_USER]
 
 when@test:
     security:
@@ -38,7 +64,8 @@ when@test:
             # are not important, waste resources and increase test times. The following
             # reduces the work factor to the lowest possible values.
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+                App\Entity\User:
+                    algorithm: auto
+                    cost: 4 # Lowest possible value for bcrypt
+                    time_cost: 3 # Lowest possible value for argon
+                    memory_cost: 10 # Lowest possible value for argon
