--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^3.4",
         "easycorp/easyadmin-bundle": "^4.24",
+        "league/uri-interfaces": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^1.15",
         "symfony/asset": "7.0.*",
@@ -45,7 +46,7 @@
         "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "3.15"
     },
     "config": {
         "allow-plugins": {
