--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+    #enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -9,21 +10,28 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
+            #password_hashers:
+                #App\Entity\User:
+                    #algorithm: auto
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\LoginAuthenticator
 
             form_login:
-                login_path: login
-                check_path: login
+                login_path: app_security_login
+                check_path: app_security_login
+                enable_csrf: true
 
             logout:
-                path: logout
+                path: app_security_logout
                 # where to redirect after logout
                 target: /
             entry_point: App\Security\LoginAuthenticator
@@ -45,16 +53,19 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/agent, roles: ROLE_AGENT }
-         - { path: ^/login, roles: PUBLIC_ACCESS }
-         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
-
 
     role_hierarchy:
         ROLE_ADMIN:       [ROLE_AGENT, ROLE_ABONNE, ROLE_USER]
         ROLE_AGENT:       [ROLE_ABONNE, ROLE_USER]
+
+    access_control:
+         #- { path: ^/admin, roles: ROLE_ADMIN }
+         #- { path: ^/agent, roles: ROLE_AGENT }
+         #- { path: ^/login, roles: PUBLIC_ACCESS }
+         #- { path: ^/, roles: IS_AUTHENTICATED_FULLY }
+
+
+   
 
 when@test:
     security:
