--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "symfony/ux-turbo": "^2.26",
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
+        "symfony/webpack-encore-bundle": "^2.3",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "3.15"
