--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "dependencies": {
     "flatpickr": "^4.6.13"
+  },
+  "scripts": {
+    "dev": "encore dev",
+    "build": "encore production"
+  },
+  "devDependencies": {
+    "@symfony/webpack-encore": "^5.1.0"
+  },
+
+  "scripts": {
+  "dev": "webpack --mode development",
+  "build": "webpack --mode production"
   }
 }
