modif login.html.twig+security.yaml+.env

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=8cd5e731729d1688f72c266fa3fa1910
+APP_DEBUG=1
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
