--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,18 +23,22 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginAuthenticator
+            # custom_authenticator: App\Security\LoginAuthenticator
 
             form_login:
-                login_path: app_security_login
-                check_path: app_security_login
-                enable_csrf: true
+                 login_path: app_security_login
+                 check_path: app_security_login
+                 username_parameter: _email
+                 password_parameter: _password
+                 enable_csrf: true
 
             logout:
                 path: app_security_logout
                 # where to redirect after logout
                 target: /
-            entry_point: App\Security\LoginAuthenticator
+                #entry_point: App\Security\LoginAuthenticator
+                #entry_point: form_login
+
 
             remember_me:
                 secret: '%kernel.secret%'
@@ -59,13 +63,10 @@ security:
         ROLE_AGENT:       [ROLE_ABONNE, ROLE_USER]
 
     access_control:
-         #- { path: ^/admin, roles: ROLE_ADMIN }
-         #- { path: ^/agent, roles: ROLE_AGENT }
-         #- { path: ^/login, roles: PUBLIC_ACCESS }
-         #- { path: ^/, roles: IS_AUTHENTICATED_FULLY }
-
-
-   
+        #- { path: ^/admin, roles: ROLE_ADMIN }
+        #- { path: ^/agent, roles: ROLE_AGENT }
+        #- { path: ^/login, roles: PUBLIC_ACCESS }
+        #- { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
